<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@android:drawable/ic_menu_revert"
        android:id="@+id/menu_reset"
        android:orderInCategory="100"
        android:title="@string/menu_reset"
        app:showAsAction="always" />
    <item
        android:icon="@android:drawable/ic_menu_edit"
        android:id="@+id/menu_sketch"
        android:orderInCategory="200"
        android:title="@string/menu_sketch"
        app:showAsAction="always" />
    <item
        android:icon="@android:drawable/ic_menu_view"
        android:id="@+id/menu_colorize"
        android:orderInCategory="300"
        android:title="@string/menu_colorize"
        app:showAsAction="always" />
    <item
        android:icon="@android:drawable/ic_menu_share"
        android:id="@+id/menu_share"
        android:orderInCategory="400"
        android:title="@string/menu_share"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="500"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
